# wthrr-the-weathercrab

./: .clippy.toml  .gitignore  .renovaterc.json5  .tarpaulin.toml  Cargo.toml  INSTALL.md  LICENSE  README.md  flake.nix  rustfmt.toml  wthrr.ron  ww.ron
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  lint.yml  pr.yml  release.yml  tarpaulin.yml  test-results.yml
locales/: generate.sh  pure-rust-locales.txt
src/: main.rs
src/modules/: api.rs  args.rs  config.rs  display.rs  forecast.rs  greeting.rs  localization.rs  location.rs  mod.rs  params.rs  translation.rs  units.rs  weather.rs
src/modules/confy/: lib.rs  mod.rs  utils.rs
src/modules/display/: border.rs  current.rs  day.rs  forecast.rs  graph.rs  greeting.rs  gui_config.rs  historical.rs  hourly.rs  mod.rs  product.rs  utils.rs  weathercode.rs  week.rs  wind.rs
src/modules/locales/: localization.rs  mod.rs  translation.rs
src/modules/params/: address.rs  forecast.rs  greeting.rs  gui.rs  language.rs  mod.rs  unit.rs  units.rs
