[package]
name = "wthrr"
version = "0.6.0"
authors = ["Turiiya <tobmoj@web.de>"]
edition = "2021"
license = "MIT"
description = "Weather companion for the terminal"
readme = "README.md"
homepage = "https://github.com/tobealive/wthrr-the-weathercrab"
repository = "https://github.com/tobealive/wthrr-the-weathercrab"
keywords = ["cli", "weather", "meteorological"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.0", default-features = false, features = [
	"derive",
	"std",
	"help",
	"usage",
	"error-context",
	"suggestions",
] }
colored = "2.0"
confy = { version = "0.5"  } 
dialoguer = { version = "0.10.1", default-features = false }
regex = { version = "1.7", default-features = false, features = ["std"]  } 
reqwest = { version ="0.11", features=["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", features=["macros", "rt-multi-thread"] }

[profile.release]
strip = true

[[bin]]
name = "wthrr"
path = "src/main.rs"
