[package]
name = "wthrr"
version = "1.0.1"
authors = ["Turiiya <tobmoj@web.de>"]
edition = "2021"
license = "MIT"
description = "Weather companion for the terminal"
readme = "README.md"
homepage = "https://github.com/tobealive/wthrr-the-weathercrab"
repository = "https://github.com/tobealive/wthrr-the-weathercrab"
keywords = ["cli", "weather", "meteorological", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [
	"clock",
	"unstable-locales",
] }
clap = { version = "4.2", default-features = false, features = [
	"derive",
	"std",
	"help",
	"usage",
	"error-context",
	"suggestions",
] }
colored = "2.0"
directories = "5.0"
dialoguer = { version = "0.10", default-features = false }
futures = "0.3"
optional_struct = "0.3"
regex = { version = "1.7" }
reqwest = { version = "0.11", features = ["json"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
scopeguard = "1.1"

[profile.release]
strip = true

[[bin]]
name = "wthrr"
path = "src/main.rs"
